Added bot stuff and whatever

--- a/ayahuasca/index.html
+++ b/ayahuasca/index.html
@@ -7,6 +7,7 @@
 <a href="#wiab">	- What is ayahuasca bot?</a><br>
 <a href="#wdtncf">	- Where does the name come from?</a><br>
 <a href="#hciitbtms">	- How can I invite the bot to my server?</a><br>
+<a href="#wdtbs">	- Does the bot store any type of data (messages, images, etc)?</a><br>
 <a href="#cmd">Commands</a><br>
 <a href="#utility">	- Utility</a><br>
 
@@ -19,6 +20,8 @@
 <p>The name ayahuasca comes from a south american psychoactive brew that can cause psychedelic effects and is used as a spiritual medicine by the indigenous peoples and other religions, you can read more about it <a href="https://en.wikipedia.org/wiki/Ayahuasca">here</a>. And no, I have never used it, but I think it's a beautiful example of culture, specially of south america.</p>
 <b id="hciitbtms">How can I invite the bot to my server?</b>
 <p>You can invite the bot clicking on this <a href="https://discord.com/api/oauth2/authorize?client_id=376358904252334080&permissions=0&scope=bot">link</a>, you may need to login into your discord account. Please note that i'm currently hosting the bot on a Raspberry PI 3B, so it is little bit slow.</p>
+<b id="wdtbs">Does the bot store any type of data (messages, images, etc)?</b>
+<p>No, but yes. The bot will store images that are used with the <a href="#image">image commands</a> and then get discarded at 3PM UTC, user ids will also be stored for the <a href="#economy">economy commands</a>. Messages and other data will be always discarded after the command function has finished. However since the bot is currently closed-source and running on my own server, you will have to take my word for it.</p>
 
 <hr>
 
