--- a/ayahuasca/index.html
+++ b/ayahuasca/index.html
@@ -9,7 +9,7 @@
 <a href="#hciitbtms">	---- How can I invite the bot to my server?</a><br>
 <a href="#wdtbs">	---- Does the bot store any type of data (messages, images, etc)?</a><br>
 <a href="#wwyrtsc">	---- When are you going to release the source code?</a><br>
-<a href="#inmh">	---- I need more help/Where can I check the updates.</a><br>
+<a href="#inmh">	---- I need more help/Where can I check the updates?</a><br>
 <a href="#cmd">Commands</a><br>
 <a href="#utility">	---- Utility</a><br>
 <a href="#image">	---- Image</a><br>
@@ -29,7 +29,7 @@
 <p>The bot will store images that are used with the <a href="#image">image commands</a> and discard all at 3PM UTC, user ids will also be stored for the <a href="#economy">economy commands</a>. Messages and other data will be always discarded after the command function has finished. However since the bot is currently closed-source and running on my own server, you will have to take my word for it.</p>
 <h4 id="wwyrtsc">When are you going to release the source code?</h4>
 <p>Probably after I finish fixing most of the problems and start rewriting the code in <a href="https://www.rust-lang.org/">Rust</a> or maybe another language.</p>
-<h4 id="inmh">I need more help/Where can I check the updates.</h4>
+<h4 id="inmh">I need more help/Where can I check the updates?</h4>
 <p>Join my server using this invite <strong>R3pXgBN</strong> (discord.com/invite/ ←put the code here).</p>
 
 <hr>
