--- a/index_br.html
+++ b/index_br.html
@@ -1,4 +1,4 @@
-<a href="index_br.html"><img title="alguem vai ficar ofendido" style="position: absolute; top: 0; float:left; width:2.2%" src="img/br.png"></a>
+<a href="index.html"><img title="alguem vai ficar ofendido" style="position: absolute; top: 0; float:left; width:2.2%" src="img/uk.png"></a>
 <img title="boo" style="position: absolute; bottom: 0; float:left; width:5%" src="img/CuddlesSittingFromBehindHS33.png">
 <center>
 <h1>site do rafameou</h1>
