--- a/index.html
+++ b/index.html
@@ -1,46 +1,39 @@
-<a href="index_br.html"><img title="alguem vai ficar ofendido" style="position: absolute; top: 0; float:left; width:2.2%" src="img/br.png"></a>
+<!DOCTYPE html>
+<html>
+<head>
+  <link rel="stylesheet" href="css.css">
+</head>
+<body>
 <img title="boo" style="position: absolute; bottom: 0; float:left; width:5%" src="img/CuddlesSittingFromBehindHS33.png">
-<center>
-<h1>site do rafameou</h1>
-<!-- é de proposito -->
+
+<h1><p>Bem-vindo ao meu site!</p></h1>
+<hr>
+<p>Meu nome é Rafael, utilizo o <i>nick</i> rafameou em boa parte da internet. Atualmente estou cursando Bacharelado em Ciência da Computação na UTFPR, pretendo ir pra área de licenciatura.</p><br>
+<p>Uso esse site para <i>hostiar</i> coisas aleatórias, no começo eu iria fazer um estilo de mini blog porém perdi a vontade. </p><br>
 <img style="width: 30%; margin-left: 1%;" src="img/4x.gif">
-<img style="width: 6%; margin-top: -4%;" src="img/numbuhgood.png">
-</center>
+
 <hr>
-<center>
-<p>Bem-vindo ao meu site!</p>
-<p>Meu nome é <a title="Alem do nick rafameou, porém já utlizei outros nicks no passado como SnowFez, Voibeas, entre outros.">Rafael</a>, tenho 20 anos e gosto de fazer programas para <i>desktop</i> e mexer com servidores <small>(linux)</small>, como é possível observar, <i>frontend</i> não é meu forte.</p>
-<p>Ainda estou começando minha jornada na área de computação, então ainda tenho que experimentar muitas áreas antes de decidir qual caminho seguir.</p>
-<p>Utilizo esse site do GitHub pra salvar textos aleatórios contando experiências ou facilitar gambiarras cotidianas nos meus aplicativos.</p>
-<p>Minhas redes sociais são: <a href="https://twitter.com/rafameou">Twitter</a>, <a href="https://mastodon.social/@rafameou">Mastodon</a>, <a href="https://t.me/rafameou">Telegram</a>, Discord <sup>(rafameou#6368)</sup> e <a href="https://github.com/rafameou/">GitHub</a>.</p>
-<p>Caso você seja das antigas, tenho um correio eletrônico nada elegante: rafameou@cock.li</p>
-</center>
-<hr>
-<center>
+<p>Existe algumas redes sociais minhas nos botões abaixo. </p><br>
 <a href="https://cyber.dabamos.de/88x31/index.html" title="button made by mesoscale"><img src="img/badges/88x31.gif"></a>
 <a href="https://88by31.neocities.org/"><img src="img/badges/88by31.gif"></a>
 <img src="img/badges/bestdesktop.gif">
 <img src="img/badges/besteyes2.gif">
 <a href="https://store.steampowered.com/app/650700/Yume_Nikki/"><img src="img/badges/beyes.gif"></a>
-<img src="img/badges/christnow.gif">
 <img src="img/badges/css.png">
 <img src="img/badges/doombut.gif">
-<img src="img/badges/eeveelutions-vaporeon.gif" title="button made by 44nifty">
 <a href="https://www.mozilla.org/firefox/new/"><img src="img/badges/firefoxget.gif"></a>
 <a href="https://gimp.org"><img src="img/badges/gimp.gif"></a>
 <a href="https://kernel.org"><img src="img/badges/gnu-linux.gif"></a>
 <a href="https://developer.mozilla.org/en-US/docs/Web/HTML"><img src="img/badges/html_learn_it_today.gif"></a>
 <a href="https://www.irfanview.com/"><img src="img/badges/irfan.gif"></a>
-<a href="https://github.com/iTODDLERS-BTFO/iToddlers-BTFO"><img src="img/badges/itoddler.gif"></a>
 <a href="https://kde.org/"><img src="img/badges/knbutton.gif"></a>
 <a href="https://keepassxc.org/"><img src="img/badges/keepassxc.png" title="button made by mincerafter42"></a>
 <a href="https://mastodon.social/@rafameou"><img src="img/badges/mastodon_button_3.gif"></a>
-<a href="https://microsoft.com"><img src="img/badges/ms.gif"></a>
-<img src="img/badges/msiemoz.gif">
-<img src="img/badges/petscop_ended.png">
 <a href="https://www.opensuse.org/"><img src="img/badges/pwsuse.gif"></a>
 <a href="https://nicotine-plus.org/"><img src="img/badges/soulseek.gif"></a>
 <a href="https://twitter.com/rafameou"><img src="img/badges/twitterbutton.gif"></a>
 <a href="https://vivaldi.com/"><img src="img/badges/vivaldi.gif"></a>
 <a href="https://neocities.org/"><img src="img/badges/webpassion.gif"></a>
-</center>
+<hr>
+</body>
+</html>
