--- a/index.html
+++ b/index.html
@@ -1,39 +1,20 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <link rel="stylesheet" href="css.css">
-</head>
-<body>
-<img title="boo" style="position: absolute; bottom: 0; float:left; width:5%" src="img/CuddlesSittingFromBehindHS33.png">
-
-<h1><p>Bem-vindo ao meu site!</p></h1>
-<hr>
-<p>Meu nome é Rafael, utilizo o <i>nick</i> rafameou em boa parte da internet. Atualmente estou cursando Bacharelado em Ciência da Computação na UTFPR, pretendo ir pra área de licenciatura.</p><br>
-<p>Uso esse site para <i>hostiar</i> coisas aleatórias, no começo eu iria fazer um estilo de mini blog porém perdi a vontade. </p><br>
-<img style="width: 30%; margin-left: 1%;" src="img/4x.gif">
-
-<hr>
-<p>Existe algumas redes sociais minhas nos botões abaixo. </p><br>
-<a href="https://cyber.dabamos.de/88x31/index.html" title="button made by mesoscale"><img src="img/badges/88x31.gif"></a>
-<a href="https://88by31.neocities.org/"><img src="img/badges/88by31.gif"></a>
-<img src="img/badges/bestdesktop.gif">
-<img src="img/badges/besteyes2.gif">
-<a href="https://store.steampowered.com/app/650700/Yume_Nikki/"><img src="img/badges/beyes.gif"></a>
-<img src="img/badges/css.png">
-<img src="img/badges/doombut.gif">
-<a href="https://www.mozilla.org/firefox/new/"><img src="img/badges/firefoxget.gif"></a>
-<a href="https://gimp.org"><img src="img/badges/gimp.gif"></a>
-<a href="https://kernel.org"><img src="img/badges/gnu-linux.gif"></a>
-<a href="https://developer.mozilla.org/en-US/docs/Web/HTML"><img src="img/badges/html_learn_it_today.gif"></a>
-<a href="https://www.irfanview.com/"><img src="img/badges/irfan.gif"></a>
-<a href="https://kde.org/"><img src="img/badges/knbutton.gif"></a>
-<a href="https://keepassxc.org/"><img src="img/badges/keepassxc.png" title="button made by mincerafter42"></a>
-<a href="https://mastodon.social/@rafameou"><img src="img/badges/mastodon_button_3.gif"></a>
-<a href="https://www.opensuse.org/"><img src="img/badges/pwsuse.gif"></a>
-<a href="https://nicotine-plus.org/"><img src="img/badges/soulseek.gif"></a>
-<a href="https://twitter.com/rafameou"><img src="img/badges/twitterbutton.gif"></a>
-<a href="https://vivaldi.com/"><img src="img/badges/vivaldi.gif"></a>
-<a href="https://neocities.org/"><img src="img/badges/webpassion.gif"></a>
-<hr>
-</body>
+	<head>
+		<link rel="stylesheet" href="css.css">
+	</head>
+	<body>
+		<a class="cud" href="index.html"></a>
+		<div class="def">
+			<div class="cen">
+				bem-vindo
+				<hr>
+				<a href="rafa.html" class="btn"><b>eu</b></a>
+				<a href="wip.html" class="btn"><b>mimi</b></a>
+				<a href="wip.html" class="btn"><b>projetos</b></a>	
+				<a href="wip.html" class="btn"><b>blog</b></a>
+				<a href="wip.html" class="btn"><b>gatinhos</b></a>
+			</div>
+		</div>
+	</body>
 </html>
