--- a/wip.html
+++ b/wip.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" href="../css.css">
+		<link rel="stylesheet" href="css.css">
 	</head>
 	<body>
-		<a class="cud" href="../index.html"></a>
+		<a class="cud" href="index.html"></a>
 		<div class="def">
 			<div class="cen">
-				<img src="../img/wip.png">
+				<img src="img/wip.png">
 				<br>
 				Em construção!	
 			</div>
