--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
 		<link rel="stylesheet" href="css.css">
 	</head>
 	<body>
-		<a class="cud" href="index.html"></a>
+		<a class="cud" href="index.html" title="Voltar."></a>
 		<div class="def">
-			<div class="cen">
-				bem-vindo
-				<hr>
+			<div class="cen">	
 				<a href="rafa.html" class="btn"><b>eu</b></a>
 				<a href="wip.html" class="btn"><b>mimi</b></a>
 				<a href="wip.html" class="btn"><b>projetos</b></a>	
 				<a href="wip.html" class="btn"><b>blog</b></a>
-				<a href="wip.html" class="btn"><b>gatinhos</b></a>
+				<a href="wip.html" class="btn"><b>gatinhos</b></a>		
+				<a href="wip.html" class="btn"><b>🇬🇧</b></a>		
+				<br><br>
+				<img style="width: 30%; margin-left: 1%;" src="img/4x.gif">
 			</div>
 		</div>
 	</body>
