--- a/rafa.html
+++ b/rafa.html
@@ -7,33 +7,47 @@
 		<a class="cud" href="index.html"></a>
 		<div class="def">
 			<div class="cen">
-				<img src="img/chica.jpg" style="float: left;margin-right: 10px;">
-				<p> Meu nome é Rafael, utilizo o <i>nick</i> rafameou em boa parte da internet. Atualmente estou cursando Bacharelado em Ciência da Computação na UTFPR, pretendo ir pra área de licenciatura.</p>
-				<p>Uso esse site para <i>hostiar</i> coisas aleatórias. </p>
+				<img src="img/me.jpg" style="width:10%;float: left;margin-top:15px;margin-right: 10px;">
+				<p> Meu nome é Rafael, utilizo o <i>nick</i> rafameou em boa parte da internet. </p>
+				<p>Gosto bastante de Linux, Windows (ew), Nix, C, C++, Qt, Vim. É possível perceber que HTML+CSS não é meu forte.</p>
+				<p>Atualmente estou cursando Bacharelado em Ciência da Computação na Universidade Tecnologia Federal do Paraná, pretendo ir para licenciatura, porém existem inúmeras áreas que ainda não descobri, quem sabe se não mudo de idea no futuro. </p>
 				<hr>
-				<img style="width: 30%; margin-left: 1%;" src="img/4x.gif">
+				<a href="https://t.me/rafameou" class="btn"><b>telegram</b></a>
+				<a href="https://github.com/rafameou/" class="btn"><b>github</b></a>
+					<a href="https://discordapp.com/channels/@me/255741220456890368/" class="btn"><b>discord</b></a>
+				<a href="https://mastodon.social/@rafameou" class="btn"><b>mastodon</b></a>
+				<a href="https://twitter.com/rafameou" class="btn"><b>twitter</b></a>	
+				<a href="https://bsky.app/profile/rafameou.bsky.social" class="btn"><b>bsky</b></a>
+				<a href="https://www.last.fm/user/rafameou" class="btn"><b>lastfm</b></a>
+
 				<hr>
-				Existe algumas redes sociais minhas nos botões abaixo. <br><br>
+				<b>Amigos</b>
+				<br>
+				
+				<hr>
+				<b>Botões</b>
+				<br>
+				<br>
 				<a href="https://cyber.dabamos.de/88x31/index.html" title="button made by mesoscale"><img src="img/badges/88x31.gif"></a>
 				<a href="https://88by31.neocities.org/"><img src="img/badges/88by31.gif"></a>
-				<img src="img/badges/bestdesktop.gif">
+				<!-- <img src="img/badges/bestdesktop.gif">-->
 				<img src="img/badges/besteyes2.gif">
 				<a href="https://store.steampowered.com/app/650700/Yume_Nikki/"><img src="img/badges/beyes.gif"></a>
 				<img src="img/badges/css.png">
-				<img src="img/badges/doombut.gif">
-				<a href="https://www.mozilla.org/firefox/new/"><img src="img/badges/firefoxget.gif"></a>
-				<a href="https://gimp.org"><img src="img/badges/gimp.gif"></a>
+				<!--<img src="img/badges/doombut.gif">-->
+				<!--<a href="https://www.mozilla.org/firefox/new/"><img src="img/badges/firefoxget.gif"></a>-->
+				<!--<a href="https://gimp.org"><img src="img/badges/gimp.gif"></a>-->
 				<a href="https://kernel.org"><img src="img/badges/gnu-linux.gif"></a>
 				<a href="https://developer.mozilla.org/en-US/docs/Web/HTML"><img src="img/badges/html_learn_it_today.gif"></a>
-				<a href="https://www.irfanview.com/"><img src="img/badges/irfan.gif"></a>
-				<a href="https://kde.org/"><img src="img/badges/knbutton.gif"></a>
-				<a href="https://keepassxc.org/"><img src="img/badges/keepassxc.png" title="button made by mincerafter42"></a>
-				<a href="https://mastodon.social/@rafameou"><img src="img/badges/mastodon_button_3.gif"></a>
-				<a href="https://www.opensuse.org/"><img src="img/badges/pwsuse.gif"></a>
-				<a href="https://nicotine-plus.org/"><img src="img/badges/soulseek.gif"></a>
-				<a href="https://twitter.com/rafameou"><img src="img/badges/twitterbutton.gif"></a>
-				<a href="https://vivaldi.com/"><img src="img/badges/vivaldi.gif"></a>
-				<a href="https://neocities.org/"><img src="img/badges/webpassion.gif"></a>
+				<!--<a href="https://www.irfanview.com/"><img src="img/badges/irfan.gif"></a>
+					<a href="https://kde.org/"><img src="img/badges/knbutton.gif"></a>
+					<a href="https://keepassxc.org/"><img src="img/badges/keepassxc.png" title="button made by mincerafter42"></a>-->
+					<a href="https://mastodon.social/@rafameou"><img src="img/badges/mastodon_button_3.gif"></a>
+					<!--<a href="https://www.opensuse.org/"><img src="img/badges/pwsuse.gif"></a>
+						<a href="https://nicotine-plus.org/"><img src="img/badges/soulseek.gif"></a>
+						<a href="https://twitter.com/rafameou"><img src="img/badges/twitterbutton.gif"></a>
+						<a href="https://vivaldi.com/"><img src="img/badges/vivaldi.gif"></a>
+						<a href="https://neocities.org/"><img src="img/badges/webpassion.gif"></a>-->
 			</div>
 		</div>
 	</body>
