--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html>	
 	<head>
-		<link rel="stylesheet" href="css.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" href="css.css">	
 	</head>
 	<body>
 		<a class="cud" href="index.html" title="Voltar."></a>
