--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 				<a href="rafa.html" class="btn"><b>eu</b></a>
 				<a href="wip.html" class="btn"><b>mimi</b></a>
 				<a href="wip.html" class="btn"><b>projetos</b></a>	
-				<a href="blog.html" class="btn"><b>blog</b></a>
+				<a href="blog/index.html" class="btn"><b>blog</b></a>
 				<a href="wip.html" class="btn"><b>gatinhos</b></a>		
 				<a href="wip.html" class="btn"><b>🇬🇧</b></a>		
 				<br><br>
